kubernetes/media-stack/plex/deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plex
    app.kubernetes.io/instance: plex
    app.kubernetes.io/name: plex
  name: plex
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
        app.kubernetes.io/name: plex
    spec:
      nodeSelector:
        worker: "true"
      runtimeClassName: nvidia
      containers:
        - name: plex
          image: "linuxserver/plex:latest"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              nvidia.com/gpu: 1
          securityContext:
            privileged: true
          ports:
            - containerPort: 32400
              hostPort: 32400
          volumeMounts:
            - name: plexconfig
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: plexconfig
          persistentVolumeClaim:
            claimName: plex-pvc
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  selector:
    app: plex
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 32400
      targetPort: 32400
